Media query added for 768px and lower. Centers headings and alters svg margins.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="header">
-            <img class="pure-img" src="./assets/images/bg-head_01.jpg">
+            <!-- <img class="pure-img" src="./assets/images/bg-head_01.jpg"> -->
             <div class="overlay">
                     <h3 class="header-line-top">Add the finest springs<br> to your products<br><span>and the finest</span></h3>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1904.6 350.44"><defs><style>.cls-1{fill:#fff;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M250.44,346.65V117.41l-79,167.11H132.93L52,117.41V346.65H0V3.75H52L152.19,217.1,250.44,3.75h52v342.9Z"/><path class="cls-1" d="M516.74,346.65V3.75h52v342.9Z"/><path class="cls-1" d="M1465.48,314.38c-21.67,21.67-53,32.27-88.62,32.27h-120.4V3.75h120.4c35.65,0,67,10.59,88.62,32.27,37.08,37.08,34.67,87.16,34.67,136.77S1502.56,277.3,1465.48,314.38Zm-35.64-240.8c-14.44-15.89-33.71-23.11-58.27-23.11h-63.09V299.93h63.09c24.56,0,43.83-7.22,58.27-23.12,17.82-19.74,18.31-56.82,18.31-104S1447.66,93.33,1429.84,73.58Z"/><path class="cls-1" d="M1758.28,4.14a30.17,30.17,0,0,0-22.8,29.09h0c0,12,4.66,20.79,11.88,27.83,9.85-9.42,25.36-14.82,44.73-14.82,27,0,50.35,9.67,71.42,29.56l3.67,3.47,28.11-34-2.94-3A140.17,140.17,0,0,0,1792.09,0,136.21,136.21,0,0,0,1758.28,4.14Z"/><path class="cls-1" d="M1834,160l-46.92-20.31-33.82-14.91c-40.27-17.43-55.41-38.34-63-65.9-4.18,9.28-6.42,23.38-6.42,33.2,0,40,22.73,69.1,69.43,89l47.27,20.85c33.24,14.51,52,24.16,52,53.54,0,30.07-24.55,48.75-64,48.75-31.42,0-63.26-14.33-87.37-39.32l-3.57-3.71L1666.3,297l3,3.12c31.08,32.42,73.16,50.28,118.48,50.28,68.79,0,116.83-40.38,116.83-98.2C1904.6,197.66,1868.89,175,1834,160Z"/><path class="cls-1" d="M961.48.87V213c-18.31-20.76-39.27-38.54-59.22-55.45C850.66,113.77,806.09,76,806.09.87H753.62C753.62,95.34,813,145.63,865.29,190c51.6,43.74,96.16,81.51,96.16,156.64h52.47V.87Z"/><path class="cls-1" d="M753.62,149.05V346.64h52.45V208.16C788.27,192.29,768.44,173.75,753.62,149.05Z"/></g></g></svg>
@@ -29,8 +29,8 @@
             </div>
             
         </div>
-        <!-- <div class="panel about">
-            <h2>It’s the quality of our thinking and the ingenuity of our products that truly sets us apart. We’ve built our reputation over 178 years. And we haven’t just seen change in that time. We’ve created it, through unparalelled innovation. </h2>
-        </div> -->
+        <div class="panel about">
+            <h2>It’s the quality of our thinking and the ingenuity of our products that truly sets us apart. We’ve built our reputation over 178 years. And we haven’t just seen change in that time. We’ve created it, through unparalelled innovation. </h2>
+        </div>
     </body>
 </html>
