Headings positioned more accurately using vh values for position.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="link-container">
                 <div class="link">
-                    <i class="fas fa-chevron-down"></i>
+                    <a><i class="fas fa-2x fa-chevron-down"></i></a>
                 </div>
             </div>
             
